--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <meta property="og:description"
         content="Get affordable website development in Pune with SEO, eCommerce, booking, and lead generation solutions. Work directly with a freelance web developer to grow your business online.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/">
-    <meta property="og:image" content="https://yourdomain.com/assets/banner.png">
+    <meta property="og:url" content="https://web-developer-pune.pages.dev/">
+    <meta property="og:image" content="https://web-developer-pune.pages.dev/assets/banner.png">
 
     <!-- Twitter -->
-<!-- 
+    <!-- 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Website Development in Pune - Affordable Freelance Web Developer">
     <meta name="twitter:description"
@@ -46,6 +46,10 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="/script.js"></script>
+
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
 
     <!-- Schema Markup for Local SEO -->
 
