--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@
                         <input type="email" name="email" placeholder="Your Email" required />
                     </div>
                     <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+
+                    <!-- reCAPTCHA -->
+                    <div class="g-recaptcha" data-sitekey="6LdvMtwrAAAAAJE9mowhhFskC55GlPw1slM-zNAI"></div>
                     <button type="submit" class="btn-secondary">Send Message</button>
                 </form>
             </div>
@@ -335,6 +338,8 @@
             <p>© 2025 Prathamesh Satish Bhoite. All rights reserved.</p>
         </div>
     </footer>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 </body>
 
 </html>
