--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon.png">
 
     <script>
         grecaptcha.ready(function () {
