--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
                         </a>
                     </p>
                 </div>
+                <div>
                 <form class="contact-form" action="https://formspree.io/f/mrblappd" method="post">
                     <div class="form-row">
                         <input type="text" name="name" placeholder="Your Name" required />
@@ -277,7 +278,7 @@
 
                     <button type="submit" class="btn-secondary">Send Message</button>
                 </form>
-
+                </div>
             </div>
         </section>
 
